# synthesis

./: LICENSE.txt  greetings.hy  main.py  openai_comp_lang.py  pyproject.toml  string_compress.py
